# learning-moveit

./: .gitmodules  README.md  setup.sh
learning_moveit/: CMakeLists.txt  package.xml
panda_bringup/: CMakeLists.txt  package.xml
panda_bringup/launch/: panda_bringup_gazebo.launch  panda_bringup_gazebo_and_moveit.launch  panda_bringup_gazebo_controllers.launch  panda_bringup_gazebo_joint_trajectory.launch
panda_bringup/rviz/: panda_bringup_gazebo.rviz  panda_bringup_gazebo_and_moveit.rviz
panda_description/: CMakeLists.txt  package.xml  panda.gv  panda_arm_hand.gv
panda_description/gazebo/: panda_arm_hand.gazebo.xacro  panda_arm_hand_gazebo.xacro  panda_arm_hand_ros_control.xacro  panda_arm_hand_transmission.xacro  panda_arm_hand_transmission.xarco  panda_arm_hand_urdf.xacro
panda_description/launch/: panda_arm_hand_display.launch
panda_description/meshes/visual/: link_xtion.dae
panda_description/rviz/: panda_arm_hand.rviz
panda_description/urdf/: hand.urdf.xacro  hand.xacro  panda_arm.urdf.xacro  panda_arm.xacro  panda_arm_hand.urdf.xacro  panda_arm_hand.xacro  panda_hand.urdf.xacro  panda_hand.xacro  panda_xtion.urdf.xacro  panda_xtion.xacro
panda_gazebo/: CMakeLists.txt  package.xml
panda_gazebo/launch/: panda_empty_world.launch  panda_gazebo_empty_world.launch
panda_gazebo/objects/object_cube/: model.config  model.sdf
panda_gazebo/objects/object_cuboid/: model.config  model.sdf
panda_gazebo/objects/object_cylinder/: model.config  model.sdf
panda_gazebo/world/: panda_gazebo_with_shelf.world  panda_gazebo_with_table.world
panda_gazebo_controller_config/: CMakeLists.txt  package.xml
panda_gazebo_controller_config/config/: panda_gazebo_gripper_action.yaml  panda_gazebo_joint_states.yaml  panda_gazebo_joint_trajectory.yaml  panda_gazebo_ros_control.yaml
panda_gazebo_controller_config/launch/: panda_gazebo_gripper_action.launch  panda_gazebo_joint_state.launch  panda_gazebo_joint_states.launch  panda_gazebo_joint_trajectory.launch
panda_moveit_config/: .setup_assistant  package.xml
panda_moveit_config/config/: controllers.yaml  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  panda.srdf  sensors_kinect.yaml  sensors_xtion.yaml
panda_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  joystick_control.launch  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  panda_moveit_controller_manager.launch.xml  panda_moveit_sensor_manager.launch.xml  planning_context.launch  run_benchmark_ompl.launch  trajectory_execution.launch.xml  warehouse.launch  warehouse_settings.launch.xml
panda_moveit_control/: CMakeLists.txt  package.xml
panda_moveit_control/include/panda_moveit_control/: panda_moveit_pick_place_lib.h  panda_moveit_pick_place_object.h
panda_moveit_control/src/: panda_moveit_pick_place_lib.cpp  panda_moveit_pick_place_object.cpp
panda_moveit_motion_planning/: CMakeLists.txt  package.xml
panda_moveit_motion_planning/include/panda_moveit_motion_planning/: panda_moveit_motion_planning.h
panda_moveit_motion_planning/src/: panda_moveit_motion_planning.cpp
panda_teleop/: CMakeLists.txt  package.xml
panda_teleop/include/panda_teleop/: panda_teleop_arm_hand_keyboard.h  panda_teleop_trajectory_keyboard.h
panda_teleop/src/: panda_teleop_arm_hand_keyboard.cpp  panda_teleop_trajectory_keyboard.cpp
