<?xml version="1.0"?>
<package>
  <name>learning_moveit</name>
  <version>0.0.1</version>
  <description>The learning_moveit metapackage contains some packages for motion planning.</description>

  <maintainer email="myyerrol@126.com">myyerrol</maintainer>

  <license>BSD</license>

  <author email="myyerrol@126.com">myyerrol</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>panda_moveit_config</run_depend>

</package>
