<?xml version="1.0"?>
<package format="2">
  <name>learning_moveit</name>
  <version>0.0.1</version>
  <description>The learning_moveit metapackage contains some packages for learning moveit.</description>

  <maintainer email="myyerrol@126.com">myyerrol</maintainer>

  <license>BSD</license>

  <author email="myyerrol@126.com">myyerrol</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>moveit_tutorials</exec_depend>
  <exec_depend>panda_description</exec_depend>
  <exec_depend>panda_moveit_config</exec_depend>
  <exec_depend>panda_moveit_motion_planning</exec_depend>

  <export>
    <metapackage/>
  </export>

</package>
