<?xml version="1.0"?>
<package format="2">
  <name>panda_moveit_motion_planning</name>
  <version>0.0.1</version>
  <description>The panda_moveit_motion_planning package provides motion planning for panda_arm_hand by using kinematics.</description>

  <maintainer email="dave@picknik.ai">Dave Coleman</maintainer>
  <maintainer email="mike@picknik.ai">Mike Lautman</maintainer>
  <maintainer email="myyerrol@126.com">myyerrol</maintainer>

  <license>BSD</license>

  <author email="sachinc@willowgarage.com">Sachin Chitta</author>
  <author email="dave@picknik.ai">Dave Coleman</author>
  <author email="mike@picknik.ai">Mike Lautman</author>
  <author email="myyerrol@126.com">myyerrol</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>pluginlib</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>moveit_ros_perception</build_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>geometric_shapes</build_depend>
  <build_depend>moveit_visual_tools</build_depend>

  <exec_depend>pluginlib</exec_depend>
  <exec_depend>moveit_core</exec_depend>
  <exec_depend>moveit_fake_controller_manager</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>moveit_ros_perception</exec_depend>
  <exec_depend>interactive_markers</exec_depend>
  <exec_depend>moveit_visual_tools</exec_depend>
  <exec_depend>joy</exec_depend>

</package>
